fixed portfolio alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,3 @@
-	
-See the example below. This will position your Footer to stick to bottom if the page has less content and behave like a normal footer if the page has more content.
-
-Demo and Tutorial
-
-CSS
 
 * {
     margin: 0;
@@ -16,10 +10,14 @@ body {
 }
 .container {
     min-height: 100%;
-    height: auto !important;
+    height: auto;
     height: 100%;
     margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
 }
 .footer, .push {
     height: 55px; /* .push must be the same height as .footer */
+}
+.bio-image {
+	width: 250px; 
+	height: auto;
 }
